<?xml version="1.0"?>
<package format="3">
  <name>sjtu_drone_control</name>
  <version>0.0.1</version>
  <description>Control package with Python and C++ nodes publishing to /cmd_vel</description>
  <maintainer email="akshanthchouhan.m@gmail.com">Akshanth Chouhan</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
